--- a/config/dataset/mura_448.yaml
+++ b/config/dataset/mura_448.yaml
@@ -3,7 +3,8 @@ _args_:
   - "MURA"
   - ${batch_size}
 num_workers: ${num_workers}
-study_level: False
+study_level: false
+train_ratio: ${eval_type.train_ratio}
 train_transform:
   _target_: albumentations.Compose
   _args_:
