--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy==1.26.2
 pandas==2.1.4
 Pillow==10.1.0
 PyYAML==6.0.1
+pytorch-lightning==2.1.2
 regex==2023.10.3
 scikit-learn==1.3.2
 scipy==1.11.4
