--- a/config/classification.yaml
+++ b/config/classification.yaml
@@ -14,7 +14,8 @@ accelerator: gpu
 
 classifier_dropout: 0.5
 pool_image: True
-learning_rate: 1e-4
+classifier_learning_rate: 1e-4
+encoder_learning_rate: 1e-6
 weight_decay: 1e-6
 freeze_encoder: ${eval_type.freeze_encoder}
 
