--- a/config/detection.yaml
+++ b/config/detection.yaml
@@ -1,21 +1,21 @@
 
 defaults:
   - dataset: grazpedwri
-  - detection_model: vit_b16_224_dr_bert
+  - detection_model: yolos_vit_b16_224_dr_bert
   - eval_type: fine_tuning_all
   - _self_
 
 seed: 12345
 batch_size: 16
-accumulate_grad_batches: 16
+accumulate_grad_batches: 4
 num_workers: 16
 max_epochs: 1000
 precision: 16-mixed
 accelerator: gpu
 
-detector_learning_rate: 1e-5
-encoder_learning_rate: 1e-7
-weight_decay: 1e-6
+detector_learning_rate: 1e-4
+encoder_learning_rate: 1e-6
+weight_decay: 1e-5
 freeze_encoder: ${eval_type.freeze_encoder}
 
 project_name: vlp_detection_benchmark
