datasets: resize instead of padding

--- a/config/dataset/mura_448.yaml
+++ b/config/dataset/mura_448.yaml
@@ -8,12 +8,9 @@ train_ratio: ${eval_type.train_ratio}
 train_transform:
   _target_: albumentations.Compose
   _args_:
-    - - _target_: albumentations.LongestMaxSize
-        max_size: 448
-      - _target_: albumentations.PadIfNeeded
-        min_height: 448
-        min_width: 448
-        border_mode: 0
+    - - _target_: albumentations.Resize
+        height: 448
+        width: 448
       - _target_: albumentations.Normalize
         mean:
           - 0.5
@@ -29,12 +26,9 @@ train_transform:
 test_transform:
   _target_: albumentations.Compose
   _args_:
-    - - _target_: albumentations.LongestMaxSize
-        max_size: 448
-      - _target_: albumentations.PadIfNeeded
-        min_height: 448
-        min_width: 448
-        border_mode: 0
+    - - _target_: albumentations.Resize
+        height: 448
+        width: 448
       - _target_: albumentations.Normalize
         mean:
           - 0.5
